# projeto

./: .gitignore  README.md  app.py  pyproject.toml  recursive.ipynb
csv/: Predict.csv
